/*
 * Copyright 2023 The Cross-Media Measurement Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package wfa.measurement.reporting.v1alpha;

option java_package = "org.wfanet.measurement.reporting.v1alpha";
option java_multiple_files = true;

message ListReportingSetsPageToken {
  int32 page_size = 1;
  string measurement_consumer_reference_id = 2;
  message PreviousPageEnd {
    string measurement_consumer_reference_id = 1;
    fixed64 external_reporting_set_id = 2;
  }
  PreviousPageEnd last_reporting_set = 3;
}

message ListReportsPageToken {
  int32 page_size = 1;
  string measurement_consumer_reference_id = 2;
  message PreviousPageEnd {
    string measurement_consumer_reference_id = 1;
    fixed64 external_report_id = 2;
  }
  PreviousPageEnd last_report = 3;
}
